k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: restaurant
  namespace: restaurant

spec:
  type: ClusterIP

  selector:
    app: restaurant

  ports:
    - name: http
      port: 81
      targetPort: 80
